--- a/style/SCSS/all.scss
+++ b/style/SCSS/all.scss
@@ -1,568 +1,6 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-//GO
-/*全域*/
-* {
-    box-sizing: border-box;
-    /*outline: 1px solid #fff*/
-}
-a {
-    text-decoration: none;
-}
-img {
-    vertical-align: middle;
-}
-body {
-    background-color: #1E1E1E;
-    line-height: 1.2;
-    font-family: 'Noto Sans TC', sans-serif;
-    color: #fff;
-}
-.container {
-    max-width: 1320px;
-    margin: 0 auto;
-    padding: 0 12px;
-}
-  
-/*各區設定*/
-//1-header
-.header {
-    border-bottom: 1px solid #fff;
-    padding: 20px 0;
-    a {
-        color: #fff;
-    }
-    img {
-        max-width: 245px;
-    }
-    .nav-icon {
-        display: none;
-    }
-}
-//2-main
-.main {
-    h2 {
-        font-size: 120px;
-        padding: 40px 0;
-    }
-    .btn-start {
-        display: inline-block;
-        color: #fff;
-        border: 1px solid #fff;
-        border-radius: 16px;
-        padding: 20px 40px;
-        margin-bottom: 100px;
-    }
-}
-//3-sever
-.sever{
-    padding: 160px 0;
-    &-title {
-        padding-bottom: 80px;
-        h5 {
-            white-space: nowrap;
-            width: 33.33%;
-            padding-right: 24px;
-        }
-        h4 {
-            width: 66.66%;
-        }
-    }
-    &-list {
-        gap: 24px;
-    }
-    &-listCard {
-        width: 33.33%;
-        border: 1px solid #525252;
-        padding: 80px 40px;
-        border-radius: 16px;
-        &:hover {
-            border-color: #fff;
-        }
-    }
-}
-//4-partner
-.partner {
-    &-logo {
-        /*兩側陰影做法go*/ //兩側陰影作法參考同學
-        position: relative;
-        white-space: nowrap; //避免文字換行
-        &::before, &::after { 
-            position: absolute;
-            content: '';
-            top: 10;
-            bottom: 0;
-            box-shadow: 0 0 100px 100px #1E1E1E;
-        }
-        /*兩側陰影做法end*/
-        /*參考同學做法1(兩側陰影)：https://codepen.io/Eero-Chiao/pen/OJBdyYg
-        position: relative;
-        overflow: hidden;
-        &::before, &::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            z-index: 1;
-            box-shadow: 0 0 80px 80px #1E1E1E;
-        }*/
-        /*background: linear-gradient();*/
-        img {
-            width: 160px;
-            height: 40px;
-            padding: 0 20px;
-        }
-    }
-    &-message {
-        padding: 160px 0;
-        gap: 24px;
-    }
-    &-messageCard {
-        width: 33.33%;
-        padding: 40px;
-        background: #FFFFFF14; /*background: rgba(255, 255, 255, 0.08);*/
-        border-radius: 16px;
-    }
-}
-//5-content
-.content {
-    color: #020202;
-    background-color: #fff;
-    border-radius: 160px;
-    padding: 160px 0;
-    h3 {
-        text-align: center;
-    }
-}
-.search {
-    background-color: #F2F2F2;
-    border-radius: 16px;
-    padding: 20px 40px;
-    &-tool {
-        width: 100%;
-        color: #919191;
-        /*去除預設樣式↓↓*/
-        border: 0; //去除未選中狀態邊框
-        outline: none; //去除選中狀態邊框
-        /*去除預設樣式↑↑*/
-        background-color: #F2F2F2;
-    }
-}
-.selectAd {
-    select { /*無法以class清除預設*/
-        /*將預設的select選擇框樣式清除↓*/
-        appearance: none;
-        -moz-appearance: none;
-        -webkit-appearance: none;
-        /*將預設的select選擇框樣式清除↑*/
-        border-radius: 16px;
-        padding: 20px 40px;
-    }
-    &-itemsAll, &-itemsNewold {
-        optgroup {
-            color: #919191;
-            padding: 20px 40px;
-        }
-        option {
-            color: #020202;
-            padding-bottom: 4px;
-            &:hover, &:active, &:focus {
-            background-color: #F2F2F2;
-            }
-        }
-    }
-    &-nav {
-        gap: 0 20px;
-        button {
-            font-size: 16px;
-            line-height: 1.5;
-            color: #919191;
-            background-color: #fff;
-            border-radius: 16px;
-            border: 0;
-            padding: 8px 16px;
-            white-space: nowrap; //避免文字換行
-            &:hover {
-            border: 1px solid #000;
-            }
-            &:active, &:focus {
-            background-color: #F2F2F2;
-            color: #020202;
-            font-weight: 700;
-            border: 0;
-            }
-        }
-    }
-    .optg-style {
-        border-bottom: 1px solid #F2F2F2;
-    }
-}
-.content_list {
-    padding: 40px 0;
-    &-card-img {
-        overflow: hidden;
-        img {
-            transition: 1.5s; //img以1.5秒時速放大
-            &:hover {
-            transform: scale(1.5, 1.5); //img x&y軸放大1.5倍
-            }
-        }
-    }
-    &-card {
-        max-width: 416px;
-        border: 1px solid #F2F2F2;
-        border-radius: 16px;
-        overflow: hidden; //img不超出框，一起bdrs16px
-    }
-    &-card-title, &-card-body {
-        padding: 20px 32px;
-    }
-    &-card-body {
-        border-top: 1px solid #F2F2F2;
-    }
-}
-.content-btn {
-    gap: 0 4px;
-    button {
-        font-size: 14px;
-        line-height: 1.5;
-        font-weight: 700;
-        width: 48px;
-        height: 48px;
-        border-radius: 16px;
-        border: 0;
-        background-color: #fff;
-        &:hover {
-            border: 1px solid #000;
-        }
-        &:active, &:focus {
-            color: #fff;
-            background-color: #020202;
-        }
-    }
-}
-/*6-use*/
-.use {
-    a {
-        color: #fff;
-    }
-    &-top {
-        text-align: center;
-        padding: 160px 0;
-        &-btn {
-            display: inline-block;
-            border: 1px solid #fff;
-            border-radius: 16px;
-            padding: 20px 40px;
-        }
-    }
-    &-bottom {
-        border-top: 1px solid #fff;
-        border-bottom: 1px solid #fff;
-        padding: 80px 0;
-        img {
-            max-width: 245px;
-        }
-    }
-}
-/*7-footer*/
-.footer {
-    padding: 32px 0;
-    a {
-        color: #fff;
-        padding: 24px 0;
-    }
-    &-sideL-link {
-        gap: 20px;
-    }
-    &-sideR {
-        white-space: nowrap;
-    }
-}
-  
-/*排版設定*/
-.d-flex {
-    display: flex;
-}
-.jcc {
-    justify-content: center;
-}
-.jcsb {
-    justify-content: space-between;
-}
-.jcfe {
-    justify-content: flex-end;
-}
-.aic {
-    align-items: center;
-}
-.fxdc {
-    flex-direction: column;
-}
-.fxww {
-    flex-wrap: wrap;
-}
-  
-.fw-block {
-    font-weight: 900;
-}
-.fw-bold {
-    font-weight: 700;
-}
-.fw-regular {
-    font-weight: 400;
-}
-.fz-14 {
-    font-size: 14px;
-}
-.fz-16 {
-    font-size: 16px;
-}
-.fz-20 {
-    font-size: 20px;
-}
-.fz-24 {
-    font-size: 24px;
-}
-.fz-32 {
-    font-size: 32px;
-}
-.fz-48 {
-    font-size: 48px;
-}
-.fz-80 {
-    font-size: 80px;
-}
-.lh1_5 {
-    line-height: 1.5;
-}
-  
-.saerchRgb {
-    color: #919191;
-}
-.selectRgb {
-    color: #020202;
-}
-.cardRgb{
-    color: #525252;
-}
-  
-.pb-4 {
-    padding-bottom: 4px;
-}
-.pr-12 {
-    padding-right: 12px;
-}
-.pr-16 {
-    padding-right: 16px;
-}
-.pr-20 {
-    padding-right: 20px;
-}
-.pr-100 {
-    padding-right: 100px;
-}
-.pl-12 {
-    padding-left: 12px;
-}
-.pb-8 {
-    padding-bottom: 8px;
-}
-.pb-12 {
-    padding-bottom: 12px;
-}
-.pb-20 {
-    padding-bottom: 20px;
-}
-.pb-40 {
-    padding-bottom: 40px;
-}
-.pb-80 {
-    padding-bottom: 80px;
-}
-.pt-20 {
-    padding-top: 20px;
-}
-.ml-20 {
-    margin-left: 20px;
-}
-.mb-24 {
-    margin-bottom: 24px;
-}
-  
-/*RWD*/
-@media (max-width: 375px){
-    /*1-header*/
-    .header {
-        padding: 28px 0;
-        img {
-            max-width: 147px;
-        }
-        .nav {
-            display: none;
-        }
-        .nav-icon {
-            display: block;
-        }
-    }
-    /*2-main*/
-    .main {
-        h2 {
-            font-size: 48px;
-        }
-        .btn-start {
-            margin-bottom: 180px;
-        }
-        .effect {
-            img {
-            width: 33.33%;
-            }
-        }
-    }
-    /*3-sever*/
-    .sever {
-        padding: 120px 0;
-        &-title {
-            padding-bottom: 48px;
-        }
-        h4, h5 {
-            width: 100%;
-        }
-        &-listCard {
-            width: 100%;
-        }
-    }
-    /*4-partner*/
-    .partner {
-        &-messageCard {
-            width: 100%;
-        }
-    }
-    /*5-content*/
-    .content {
-        border-radius: 20px;
-    }
-    .selectAd {
-        &-itemsAll{
-            order: 1;
-        }
-        &-nav {
-            order: 3;
-        }
-        &-Newold {
-            order: 2;
-        }
-    }
-    .content_list {
-        padding: 48px 0 32px;
-    }
-    /*6-use*/
-    /*7-footer*/
-    .footer {
-        padding: 0;
-        &-sideL {
-            position: relative;
-            padding: 32px 0;
-        }
-        &-sideR {
-            position: absolute;
-            right: 12px;
-        }
-    }
-    
-    /**/
-    .jcc-s {
-        justify-content: center;
-    }
-    .aifs-s {
-        align-items: flex-start;
-    }
-    .fxdc-s {
-        flex-direction: column;
-    }
-    .fxww-s {
-        flex-wrap: wrap;
-    }
-    .fxdcr-s {
-        flex-direction: column-reverse;
-    }
-    
-    .fz-s-20 {
-        font-size: 20px;
-    }
-    .fz-s-32 {
-        font-size: 32px;
-    }
-    .fz-s-48 {
-        font-size: 48px;
-    }
-   
-    .pb-s-24 {
-        padding-bottom: 24px;
-    }
-    .pb-s-32 {
-        padding-bottom: 32px;
-    }
-    .pb-s-40 {
-        padding-bottom: 40px;
-    }
-    .mt-s-8 {
-        margin-top: 8px;
-    }
-    .mb-s-12 {
-        margin-bottom: 12px;
-    }
-    .mb-s-16 {
-        margin-bottom: 16px;
-    }
-    .mb-s-24 {
-        margin-bottom: 24px;
-    }
-}
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import "./base";
+@import "./index";
+@import "./priching";
+@import "./utilities";
