--- a/style/SCSS/_utilities.scss
+++ b/style/SCSS/_utilities.scss
@@ -129,6 +129,9 @@
     .fz-s-20 {
         font-size: 20px;
     }
+    .fz-s-28 {
+        font-size: 28px;
+    }
     .fz-s-32 {
         font-size: 32px;
     }
@@ -144,6 +147,9 @@
     }
     .pb-s-40 {
         padding-bottom: 40px;
+    }
+    .pb-s-64 {
+        padding-bottom: 64px;
     }
     .mt-s-8 {
         margin-top: 8px;
