--- a/style/SCSS/all.css
+++ b/style/SCSS/all.css
@@ -429,7 +429,33 @@ body {
 }
 /*Priching 定價*/
 /*各區設定*/
+.priching-main {
+  padding: 40px 0 160px;
+}
+.priching-main img {
+  max-width: 180px;
+}
+.priching-main h2 {
+  font-size: 120px;
+}
+.priching-main h4 {
+  width: 50%;
+  padding-bottom: 238px;
+}
+
 /*RWD*/
+@media (max-width: 375px) {
+  .priching-main img {
+    max-width: 117px;
+  }
+  .priching-main h2 {
+    font-size: 48px;
+  }
+  .priching-main h4 {
+    width: 66.66%;
+    padding-bottom: 258px;
+  }
+}
 /*排版設定*/
 .d-flex {
   display: flex;
@@ -591,6 +617,9 @@ body {
   .fz-s-20 {
     font-size: 20px;
   }
+  .fz-s-28 {
+    font-size: 28px;
+  }
   .fz-s-32 {
     font-size: 32px;
   }
@@ -605,6 +634,9 @@ body {
   }
   .pb-s-40 {
     padding-bottom: 40px;
+  }
+  .pb-s-64 {
+    padding-bottom: 64px;
   }
   .mt-s-8 {
     margin-top: 8px;
