--- a/style/SCSS/_utilities.scss
+++ b/style/SCSS/_utilities.scss
@@ -92,6 +92,9 @@
 .pb-20 {
     padding-bottom: 20px;
 }
+.pb-24 {
+    padding-bottom: 24px;
+}
 .pb-40 {
     padding-bottom: 40px;
 }
@@ -126,6 +129,9 @@
         flex-direction: column-reverse;
     }
     
+    .fz-s-16 {
+        font-size: 16px;
+    }
     .fz-s-20 {
         font-size: 20px;
     }
