--- a/style/SCSS/all.css
+++ b/style/SCSS/all.css
@@ -218,24 +218,33 @@ body {
   background-color: #F2F2F2;
 }
 
-.selectAd select { /*無法以class清除預設*/
-  /*將預設的select選擇框樣式清除↓*/
-  appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  /*將預設的select選擇框樣式清除↑*/
+.selectAd-Newold {
+  position: relative; /*父*/
+}
+.selectAd-Newold-btn, .selectAd-Newold-list {
+  background-color: #FFFFFF;
   border-radius: 16px;
+}
+.selectAd-Newold-btn {
+  border: 1px solid #F2F2F2;
   padding: 20px 40px;
 }
-.selectAd-itemsAll optgroup, .selectAd-itemsNewold optgroup {
-  color: #919191;
-  padding: 20px 40px;
+.selectAd-Newold-btn:hover {
+  background-color: #F2F2F2;
 }
-.selectAd-itemsAll option, .selectAd-itemsNewold option {
-  color: #020202;
-  padding-bottom: 4px;
+.selectAd-Newold-list {
+  position: absolute; /*子*/
+  right: 0; /*固定位置*/
+  margin-top: 4px; /*間距，給top:4px會跑到最上面*/
+  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1490196078);
+  padding: 16px 0;
+  display: none;
 }
-.selectAd-itemsAll option:hover, .selectAd-itemsAll option:active, .selectAd-itemsAll option:focus, .selectAd-itemsNewold option:hover, .selectAd-itemsNewold option:active, .selectAd-itemsNewold option:focus {
+.selectAd-Newold-list a {
+  display: block;
+  padding: 4px 40px;
+}
+.selectAd-Newold-list a:hover {
   background-color: #F2F2F2;
 }
 .selectAd-nav {
@@ -253,7 +262,7 @@ body {
   white-space: nowrap;
 }
 .selectAd-nav button:hover {
-  border: 1px solid #000;
+  border: 1px solid #F2F2F2;
 }
 .selectAd-nav button:active, .selectAd-nav button:focus {
   background-color: #F2F2F2;
@@ -474,6 +483,22 @@ body {
 .price-menu_cardBody a {
   color: #FFFFFF;
 }
+.price-menu_cardBody a:hover {
+  border: 1px solid #FFFFFF;
+  border-radius: 16px;
+  padding: 10px;
+}
+
+.norm {
+  padding: 160px 0;
+}
+.norm ul {
+  margin-top: -40px;
+}
+.norm li {
+  border-bottom: 1px solid #FFFFFF;
+  padding: 40px 0;
+}
 
 /*RWD*/
 @media (max-width: 375px) {
@@ -495,6 +520,15 @@ body {
   }
   .price-menu_cardBody {
     padding: 20px;
+  }
+  .norm {
+    padding: 120px 0;
+  }
+  .norm ul {
+    margin-top: 24px;
+  }
+  .norm li {
+    padding: 24px 0 40px;
   }
 }
 /*排版設定*/
@@ -618,6 +652,10 @@ body {
   padding-bottom: 20px;
 }
 
+.pb-24 {
+  padding-bottom: 24px;
+}
+
 .pb-40 {
   padding-bottom: 40px;
 }
@@ -654,6 +692,9 @@ body {
   }
   .fxdcr-s {
     flex-direction: column-reverse;
+  }
+  .fz-s-16 {
+    font-size: 16px;
   }
   .fz-s-20 {
     font-size: 20px;
