JS開啟尚未製作

--- a/style/SCSS/_index.scss
+++ b/style/SCSS/_index.scss
@@ -146,7 +146,7 @@
             margin-top: 4px; /*間距，給top:4px會跑到最上面*/
             box-shadow: 0px 4px 20px 0px #00000026;
             padding: 16px 0;
-            display: none;
+            display: none; /*還沒練習製作動畫開啟*/
         }
         &-list a {
             display: block;
