--- a/style/SCSS/all.css
+++ b/style/SCSS/all.css
@@ -238,7 +238,7 @@ body {
   margin-top: 4px; /*間距，給top:4px會跑到最上面*/
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1490196078);
   padding: 16px 0;
-  display: none;
+  display: none; /*還沒練習製作動畫開啟*/
 }
 .selectAd-Newold-list a {
   display: block;
