--- a/style/SCSS/_utilities.scss
+++ b/style/SCSS/_utilities.scss
@@ -1,4 +1,7 @@
 /*排版設定*/
+.d-block {
+    display: block;
+}
 .d-flex {
     display: flex;
 }
@@ -29,6 +32,9 @@
 }
 .fw-regular {
     font-weight: 400;
+}
+.fz-12 {
+    font-size: 12px;
 }
 .fz-14 {
     font-size: 14px;
@@ -65,9 +71,7 @@
     color: #525252;
 }
   
-.pb-4 {
-    padding-bottom: 4px;
-}
+
 .pr-12 {
     padding-right: 12px;
 }
@@ -82,6 +86,12 @@
 }
 .pl-12 {
     padding-left: 12px;
+}
+.pl-40 {
+    padding-left: 40px;
+}
+.pb-4 {
+    padding-bottom: 4px;
 }
 .pb-8 {
     padding-bottom: 8px;
@@ -103,6 +113,9 @@
 }
 .pt-20 {
     padding-top: 20px;
+}
+.pt-40 {
+    padding-top: 40px;
 }
 .ml-20 {
     margin-left: 20px;
