--- a/style/SCSS/all.css
+++ b/style/SCSS/all.css
@@ -218,6 +218,46 @@ body {
   background-color: #F2F2F2;
 }
 
+.selectAd-itemsAll {
+  position: relative; /*父*/
+}
+.selectAd-itemsAll-btn, .selectAd-itemsAll-list {
+  background-color: #fff;
+  border-radius: 16px;
+}
+.selectAd-itemsAll-btn {
+  border: 1px solid #020202;
+  padding: 20px 40px;
+}
+.selectAd-itemsAll-list {
+  position: absolute; /*子*/
+  left: 0;
+  width: 240px;
+  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1490196078);
+  padding: 20px 0;
+  margin-top: 4px;
+  display: none; /*預設隱藏，還沒做互動！！！*/
+}
+.selectAd-itemsAll-list a {
+  display: block;
+  color: #020202;
+  padding: 4px 40px;
+}
+.selectAd-itemsAll-list a:hover {
+  background-color: #F2F2F2;
+}
+.selectAd-itemsAll .itemsAll-list-btm {
+  position: relative;
+}
+.selectAd-itemsAll .itemsAll-list-btm::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 168px;
+  padding-bottom: 12px;
+  border-bottom: 1px solid #F2F2F2;
+  margin-bottom: 8px;
+}
 .selectAd-Newold {
   position: relative; /*父*/
 }
@@ -238,7 +278,7 @@ body {
   margin-top: 4px; /*間距，給top:4px會跑到最上面*/
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1490196078);
   padding: 16px 0;
-  display: none; /*還沒練習製作動畫開啟*/
+  display: none; /*預設隱藏*/
 }
 .selectAd-Newold-list a {
   display: block;
@@ -246,6 +286,9 @@ body {
 }
 .selectAd-Newold-list a:hover {
   background-color: #F2F2F2;
+}
+.selectAd-Newold-list.show {
+  display: block;
 }
 .selectAd-nav {
   gap: 0 20px;
@@ -532,6 +575,10 @@ body {
   }
 }
 /*排版設定*/
+.d-block {
+  display: block;
+}
+
 .d-flex {
   display: flex;
 }
@@ -570,6 +617,10 @@ body {
 
 .fw-regular {
   font-weight: 400;
+}
+
+.fz-12 {
+  font-size: 12px;
 }
 
 .fz-14 {
@@ -616,10 +667,6 @@ body {
   color: #525252;
 }
 
-.pb-4 {
-  padding-bottom: 4px;
-}
-
 .pr-12 {
   padding-right: 12px;
 }
@@ -638,6 +685,14 @@ body {
 
 .pl-12 {
   padding-left: 12px;
+}
+
+.pl-40 {
+  padding-left: 40px;
+}
+
+.pb-4 {
+  padding-bottom: 4px;
 }
 
 .pb-8 {
@@ -666,6 +721,10 @@ body {
 
 .pt-20 {
   padding-top: 20px;
+}
+
+.pt-40 {
+  padding-top: 40px;
 }
 
 .ml-20 {
