--- a/style/SCSS/_index.scss
+++ b/style/SCSS/_index.scss
@@ -126,6 +126,44 @@
 }
 .selectAd {
     &-itemsAll {
+        position: relative; /*父*/
+        &-btn, &-list {
+            background-color: #fff;
+            border-radius: 16px;
+        }
+        &-btn {
+            border: 1px solid #020202;
+            padding: 20px 40px;
+        }
+        &-list {
+            position: absolute; /*子*/
+            left: 0;
+            width: 240px;
+            box-shadow: 0px 4px 20px 0px #00000026;
+            padding: 20px 0;
+            margin-top: 4px;
+            display: none; /*預設隱藏，還沒做互動！！！*/
+            a {
+                display: block;
+                color: #020202;
+                padding: 4px 40px;
+                &:hover {
+                    background-color: #F2F2F2;
+                }
+            }
+        }
+        .itemsAll-list-btm {
+            position: relative;
+            &::after {
+                content: '';
+                position: absolute;
+                display: block;
+                width: 168px;
+                padding-bottom: 12px;
+                border-bottom: 1px solid #F2F2F2;
+                margin-bottom: 8px;
+            }
+        }
     }
     &-Newold {
         position: relative; /*父*/
@@ -146,7 +184,7 @@
             margin-top: 4px; /*間距，給top:4px會跑到最上面*/
             box-shadow: 0px 4px 20px 0px #00000026;
             padding: 16px 0;
-            display: none; /*還沒練習製作動畫開啟*/
+            display: none; /*預設隱藏*/
         }
         &-list a {
             display: block;
@@ -154,6 +192,9 @@
             &:hover {
                 background-color: #F2F2F2;
             }
+        }
+        &-list.show{
+            display: block;
         }
     }
 
