--- a/style/SCSS/all.css
+++ b/style/SCSS/all.css
@@ -236,7 +236,7 @@ body {
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1490196078);
   padding: 20px 0;
   margin-top: 4px;
-  display: none; /*預設隱藏，還沒做互動！！！*/
+  display: none;
 }
 .selectAd-itemsAll-list a {
   display: block;
@@ -287,7 +287,7 @@ body {
 .selectAd-Newold-list a:hover {
   background-color: #F2F2F2;
 }
-.selectAd-Newold-list.show {
+.selectAd .selectAd-Newold-list.show, .selectAd .selectAd-itemsAll-list.show {
   display: block;
 }
 .selectAd-nav {
