--- a/style/SCSS/_index.scss
+++ b/style/SCSS/_index.scss
@@ -27,6 +27,10 @@
         border-radius: 16px;
         padding: 20px 40px;
         margin-bottom: 100px;
+        &:hover {
+            color: #020202;
+            background-color: #fff;
+        }
     }
 }
 //3-sever
