--- a/style/SCSS/_index.scss
+++ b/style/SCSS/_index.scss
@@ -14,6 +14,35 @@
         display: none;
     }
 }
+/*RWD-1-header*/
+@media (max-width: 768px) {
+    .header {
+        padding: 28px 0;
+        img {
+            max-width: 147px;
+        }
+        .nav {
+            display: none;
+        }
+        .nav-icon {
+            display: block;
+        }
+    }
+}
+@media (max-width: 375px) {
+    .header {
+        padding: 28px 0;
+        img {
+            max-width: 147px;
+        }
+        .nav {
+            display: none;
+        }
+        .nav-icon {
+            display: block;
+        }
+    }
+}
 
 //2-main
 .main {
@@ -32,6 +61,34 @@
             color: #020202;
             background-color: #fff;
         }
+    }
+}
+/*RWD-2-main*/
+@media (max-width: 768px) {
+    .main {
+        h2 {
+            font-size: 80px;
+        }
+        .effect {
+            img {
+                width: 33.33%;
+            }
+        }
+    }
+}
+@media (max-width: 375px) {
+    .main {
+        h2 {
+            font-size: 48px;
+        }
+        .btn-start {
+            margin-bottom: 180px;
+        }
+        /*.effect {
+            img {
+            width: 33.33%;
+            }
+        }*/
     }
 }
 
@@ -59,6 +116,32 @@
         border-radius: 16px;
         &:hover {
             border-color: #fff;
+        }
+    }
+}
+/*RWD-3-sever*/
+@media (max-width: 768px) {
+    .sever {
+        h4, h5 {
+            width: 90%;
+        }
+        &-listCard {
+            width: 90%;
+            /*width: 66.66%;*/
+        }
+    }
+}
+@media (max-width: 375px) {
+    .sever {
+        padding: 120px 0;
+        &-title {
+            padding-bottom: 48px;
+        }
+        h4, h5 {
+            width: 100%;
+        }
+        &-listCard {
+            width: 100%;
         }
     }
 }
@@ -105,6 +188,21 @@
         padding: 40px;
         background: #FFFFFF14; /*background: rgba(255, 255, 255, 0.08);*/
         border-radius: 16px;
+    }
+}
+/*RWD-4-partner*/
+@media (max-width: 768px) {
+    .partner {
+        &-messageCard {
+            width: 90%;
+        }
+    }
+}
+@media (max-width: 375px) {
+    .partner {
+        &-messageCard {
+            width: 100%;
+        }
     }
 }
 
@@ -314,6 +412,51 @@
         }
     }
 }
+/*RWD-5-content*/
+@media (max-width: 768px) {
+    .content {
+        border-radius: 80px;
+    }
+    .selectAd {
+        &-itemsAll{
+            order: 1;
+        }
+        &-nav {
+            order: 3;
+        }
+        &-Newold {
+            order: 2;
+        }
+    }
+    .content_list {
+        &-card {
+            max-width: 110%;
+            img {
+                width: 100%;
+            }
+        }
+        
+    }
+}
+@media (max-width: 375px) {
+    .content {
+        border-radius: 20px;
+    }
+    /*.selectAd {
+        &-itemsAll{
+            order: 1;
+        }
+        &-nav {
+            order: 3;
+        }
+        &-Newold {
+            order: 2;
+        }
+    }*/
+    .content_list {
+        padding: 48px 0 32px;
+    }
+}
 
 /*6-use*/
 .use {
@@ -339,6 +482,12 @@
         }
     }
 }
+/*RWD*/
+@media (max-width: 768px) {
+}
+@media (max-width: 375px) {
+    /*6-use*/
+}
 
 /*7-footer*/
 .footer {
@@ -354,75 +503,10 @@
         white-space: nowrap; //避免文字換行
     }
 }
-  
-  
 /*RWD*/
-@media (max-width: 375px){
-    /*1-header*/
-    .header {
-        padding: 28px 0;
-        img {
-            max-width: 147px;
-        }
-        .nav {
-            display: none;
-        }
-        .nav-icon {
-            display: block;
-        }
-    }
-    /*2-main*/
-    .main {
-        h2 {
-            font-size: 48px;
-        }
-        .btn-start {
-            margin-bottom: 180px;
-        }
-        .effect {
-            img {
-            width: 33.33%;
-            }
-        }
-    }
-    /*3-sever*/
-    .sever {
-        padding: 120px 0;
-        &-title {
-            padding-bottom: 48px;
-        }
-        h4, h5 {
-            width: 100%;
-        }
-        &-listCard {
-            width: 100%;
-        }
-    }
-    /*4-partner*/
-    .partner {
-        &-messageCard {
-            width: 100%;
-        }
-    }
-    /*5-content*/
-    .content {
-        border-radius: 20px;
-    }
-    .selectAd {
-        &-itemsAll{
-            order: 1;
-        }
-        &-nav {
-            order: 3;
-        }
-        &-Newold {
-            order: 2;
-        }
-    }
-    .content_list {
-        padding: 48px 0 32px;
-    }
-    /*6-use*/
+@media (max-width: 768px) {
+}
+@media (max-width: 375px) {
     /*7-footer*/
     .footer {
         padding: 0;
@@ -436,3 +520,119 @@
         }
     }
 }
+
+
+
+
+
+/*RWD*/
+// @media (max-width: 768px) {
+//     /*1-header*/
+//     .header {
+//         padding: 28px 0;
+//         img {
+//             max-width: 147px;
+//         }
+//         .nav {
+//             display: none;
+//         }
+//         .nav-icon {
+//             display: block;
+//         }
+//     }
+//     /*2-main*/
+//     .main {
+//         h2 {
+//             font-size: 80px;
+//         }
+//     }
+//     /*3-sever*/
+//     .sever {
+//         h4, h5 {
+//             width: 100%;
+//         }
+//         &-listCard {
+//             width: 100%;
+//             /*width: 66.66%;*/
+//         }
+//     }
+// }
+// @media (max-width: 375px) {
+//     /*1-header*/
+//     .header {
+//         padding: 28px 0;
+//         img {
+//             max-width: 147px;
+//         }
+//         .nav {
+//             display: none;
+//         }
+//         .nav-icon {
+//             display: block;
+//         }
+//     }
+//     /*2-main*/
+//     .main {
+//         h2 {
+//             font-size: 48px;
+//         }
+//         .btn-start {
+//             margin-bottom: 180px;
+//         }
+//         .effect {
+//             img {
+//             width: 33.33%;
+//             }
+//         }
+//     }
+//     /*3-sever*/
+//     .sever {
+//         padding: 120px 0;
+//         &-title {
+//             padding-bottom: 48px;
+//         }
+//         /*h4, h5 {
+//             width: 100%;
+//         }*/
+//         &-listCard {
+//             width: 100%;
+//         }
+//     }
+//     /*4-partner*/
+//     .partner {
+//         &-messageCard {
+//             width: 100%;
+//         }
+//     }
+//     /*5-content*/
+//     .content {
+//         border-radius: 20px;
+//     }
+//     .selectAd {
+//         &-itemsAll{
+//             order: 1;
+//         }
+//         &-nav {
+//             order: 3;
+//         }
+//         &-Newold {
+//             order: 2;
+//         }
+//     }
+//     .content_list {
+//         padding: 48px 0 32px;
+//     }
+//     /*6-use*/
+//     /*7-footer*/
+//     .footer {
+//         padding: 0;
+//         &-sideL {
+//             position: relative;
+//             padding: 32px 0;
+//         }
+//         &-sideR {
+//             position: absolute;
+//             right: 12px;
+//         }
+//     }
+// }
