--- a/style/SCSS/all.css
+++ b/style/SCSS/all.css
@@ -61,10 +61,9 @@ table {
   /*outline: 1px solid #fff*/
 }
 
-* {
-  outline: 1px solid #000;
-}
-
+/**{
+    outline: 1px solid #000
+}*/
 a {
   text-decoration: none;
 }
