--- a/style/SCSS/_utilities.scss
+++ b/style/SCSS/_utilities.scss
@@ -135,6 +135,9 @@
     .fxww-m {
         flex-wrap: wrap;
     }
+    .fxwnw-m {
+        flex-wrap: nowrap;
+    }
     .jcc-m {
         justify-content: center;
     }
