--- a/style/SCSS/all.css
+++ b/style/SCSS/all.css
@@ -431,7 +431,7 @@ body {
   /*原設定碰到圖片時hover圖片放大，改為碰到框格區域(li)皆會放大*/
 }
 .content_list-card {
-  max-width: 416px;
+  width: 416px;
   border: 1px solid #F2F2F2;
   border-radius: 16px;
   overflow: hidden;
@@ -487,7 +487,7 @@ body {
     order: 2;
   }
   .content_list-card {
-    max-width: 110%;
+    width: 80%;
   }
   .content_list-card img {
     width: 100%;
@@ -497,19 +497,11 @@ body {
   .content {
     border-radius: 20px;
   }
-  /*.selectAd {
-      &-itemsAll{
-          order: 1;
-      }
-      &-nav {
-          order: 3;
-      }
-      &-Newold {
-          order: 2;
-      }
-  }*/
   .content_list {
     padding: 48px 0 32px;
+  }
+  .content_list-card {
+    width: 100%;
   }
 }
 /*6-use*/
@@ -879,6 +871,9 @@ body {
   }
   .fxww-m {
     flex-wrap: wrap;
+  }
+  .fxwnw-m {
+    flex-wrap: nowrap;
   }
   .jcc-m {
     justify-content: center;
